--- a/client/src/components/Messages/Messages.css
+++ b/client/src/components/Messages/Messages.css
@@ -1,126 +1,144 @@
-.Messages {
-  grid-row        : 5;
-  grid-column     : 2 / 5;
-}
-
-.Messages.collapsed {
-  border-bottom: none;
-}
-
-.chat-section{
-  border-left: black 1px solid;
+.message-section {
+  display       : flex;
+  border-left   : black 1px solid;
+  flex-direction: column;
+  transition    : height .5s;
+  max-height    : 10rem;
+  flex          : 1;
 }
 
 .message-board {
-  display              : grid;
-  grid-template-rows   : minmax(0px, auto);
-  /* grid-template-rows   : minmax(0px, 10rem); */
-  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-  gap                  : 1px solid black;
-  /* flex-flow         : column; */
-  /* width             : 100%; */
-}
-
-.message-list{
-  padding-left: 5px;
-  position    : relative;
-  word-wrap: break-word;
-}
-
-.message-list strong{
-  color: rgb(73, 137, 137);
-}
-
-.message-list::before,
-.message-list::after {
-  position: absolute;
-  width   : .3rem;
-  height  : 100%;
-  content : "";
-
-  left         : 0;
-  top          : 0;
-  border-left  : 2px solid #7b7b7b;
-  /* border-top   : 2px solid #7b7b7b; */
-  border-bottom: 2px solid #7b7b7b;
-}
-
-.message-window .title {
-  height: 1.5rem;
-}
-
-.message-section {
-  max-height: 10rem;
-}
-
-.chat-section{
-  max-height: 8.5rem;
-}
-
-.not-last-message-section{
-  border-right: black 1px solid;
-}
-
-.chat-form,
-.chat-header {
   display: flex;
-  flex-flow: row nowrap;
-}
-
-.chat-form {
-  flex-grow: 1;
-}
-
-.chat-input{
-  width: 100%;
-}
-
-.chat-input:focus{
-  outline: rgb(144, 58, 58) solid 1px;
-
-}
-
-.message-list strong.red-text{
-  color: rgb(187, 74, 74);
 }
 
 @media (max-width: 800px) {
 
-  .message-section {
-    /* max-height: unset; */
-    /* height: 8rem; */
-    /* height should be exactly 1/3 the height of parent element */
-    height: 1fr;
-    
-  }
-
-  .not-last-message-section{
-    border-right: none;
-  }
-
-  .errors-section,
-  .chat-log,
-  .chat-header {
-    border-left: none;
-  }
+  /* .Home {
+    grid-template-columns: 0fr 1fr 0fr;
+    grid-template-rows   : min-content min-content min-content min-content 1fr 1fr 1fr min-content min-content;
+    gap                  : .4rem;
+  } */
 
   .Messages {
-    grid-row   : 5;
-    grid-column: 2 / 3;
-
+    height: 100%;
+    overflow-y: auto;
   }
 
   .message-board {
-    /* grid-template-columns: unset; */
-    grid-template-columns: repeat(1, minmax(1rem, 1fr));
-    grid-template-rows: repeat(3, minmax(1rem, 8rem));
-    width                : auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(auto minmax(0, 1fr));
+    height: 100%;
   }
+  
+  .message-section {
+    grid-column: 1;
+    /* grid */
+    max-height: unset;
+    /* min-height: 0; */
+    /* height: auto; */
+    overflow-y: auto;
+    border-left: none;
+    width: 100%;
+  }
+
+  .message-list {
+    height: 100%;
+    /* overflow-y: auto; */
+  }
+
+  /* .message-section {
+    max-height : unset;
+    border-left: none;
+    overflow-y : auto;
+    height     : calc(100% + 0.4rem - 1px);
+    border     : black 1px solid;
+    border-top : none;
+  } */
+
+  /* .message-section.general-messages {
+    border-top: black 1px solid;
+    height    : calc(100% + 0.4rem - 2px);
+  } */
 
 }
 
+.message-item {
+  margin      : auto .1rem;
+  padding-left: 5px;
+  position    : relative;
+  word-wrap   : break-word;
+}
+
+.message-item:last-of-type {
+  margin-bottom: 2px;
+}
+
+.message-item strong {
+  color: rgb(73, 137, 137);
+}
+
+.message-item::before,
+.message-item::after {
+  position     : absolute;
+  width        : .2rem;
+  height       : calc(100% - 4px);
+  content      : "";
+  left         : 0;
+  bottom       : 0;
+  border-left  : 2px solid #7b7b7b;
+  border-bottom: 2px solid #7b7b7b;
+}
+
+.not-last-message-section {
+  /* border-right: black 1px solid; */
+}
+
+.chat-input {
+  /* box-sizing: border-box; */
+  /* width: calc(100%); */
+  /* margin: 3px; */
+  flex-grow: 1;
+  resize: none;
+  /* height: 1.4rem; */
+  min-height: 1.4rem;
+  /* max-height: 3.6rem; */
+  margin-right: 3px;
+  overflow: auto;
+}
+
+.chat-submit {
+  cursor: pointer;
+}
+
+.chat-form {
+  padding     : 3px;
+  display     : flex;
+  flex-direction: row;
+  justify-content:stretch;
+}
+
+.chat-input:focus {
+  outline: rgb(144, 58, 58) solid 2px;
+  border-radius: 1px;
+  /* height: 3.6rem; */
+}
+
+.chat-input.expanded {
+  height: 5.6rem;
+}
+
+.chat-expand {
+  font-size: 0.8rem;
+}
+
+.message-item strong.red-text {
+  color: rgb(187, 74, 74);
+}
+
+
 /* from https://css.gg/trash */
-.gg-trash {
+/* .gg-trash {
   box-sizing: border-box;
   position  : relative;
   display   : block;
@@ -163,4 +181,4 @@
   border-top-right-radius: 2px;
   top                    : -7px;
   left                   : -2px
-}
+} */
